fix(#6414): a documented option is applied, and a full-text index answers the same question whatever its arity (#6421)
* fix(#6414): a documented option is applied, and a full-text index answers the same question whatever its arity

Four follow-ups from #6408, independent of each other.

`astar`'s `customHeuristicFormula` was in the function's own syntax string, in its accepted-options set, and read
from the caller's map into a field that nothing ever consulted. There was no `CUSTOM` constant to dispatch to
either, so a query supplying one silently got MANHATTAN with no error and no warning. The option now names a SQL
function called as `fn(current, parent, target, source, depth, dFactor)` and returning h(n); it is resolved once
when the options are bound, not once per visited node, and consulted ahead of every axis test, so a custom formula
works with no `vertexAxisNames` declared and owns h(n) outright - no axis is read and no tie-breaker is layered on
its answer. Every way of getting it wrong is now an error the caller sees: an unknown function name,
`heuristicFormula:'CUSTOM'` with no function named, a built-in formula named alongside a custom one (a
contradiction, not a precedence question), or a function returning something that is not a number.

`CONTAINSTEXT` on a MULTI-property full-text index was two defects.

The planner required the FIRST index property to be constrained and then every following one, so a condition on
one property of an index over (title, content) was not pushed down at all. The scan it fell back to evaluates the
operator as `String.contains` where the index matches analyzer tokens, so the same operator over the same data
answered differently depending only on how the index had been declared - `CONTAINSTEXT 'ava'` found a row whose
value is `java` on a multi-property index and nothing on a single-property one - and nothing in the query text told
the user which they were getting.

A condition on BOTH properties was worse: it was pushed do